feat: releaseBatch 추가로 주문서 단위 재고 복구 지원